# quartzstream

./: .gitignore  MANIFEST.in  README.md  architecture.md  explanation.md  pyproject.toml  setup.py
.github/workflows/: build-publish.yml
benchmarks/: benchmark_hydrastream.py  benchmark_pandas_vs_hydrastream.py  benchmark_pandas_vs_quartzstream.py  benchmark_quartzstream.py
python/hydrastream/: __init__.py
python/quartzstream/: fluid.py
src/: core.hpp  core_processing.cpp  native_stream.cpp  pulse_module.cpp
tests/: test_hydrastream.py  test_quartzstream.py
