[build-system]
requires = ["setuptools>=82", "wheel", "pybind11>=2.13"]
build-backend = "setuptools.build_meta"

[project]
name = "quartzstream"
version = "0.1.0"
description = "Low-latency Arrow-native streaming for Python powered by C++."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C++",
]
dependencies = [
    "numpy>=2,<3",
    "pyarrow>=24,<25",
]

[project.optional-dependencies]
dev = [
    "pytest>=9,<10",
    "pytest-asyncio>=1.3,<2",
]
bench = [
    "pandas>=2.2,<3",
    "polars>=1.30,<2",
    "duckdb>=1.2,<2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.cibuildwheel]
build = ["cp310-*", "cp311-*", "cp312-*", "cp313-*", "cp314-*"]
